# OMPL-Planner-Comparism

./: .gitignore  README.md
ompl_cpp_bench/4roomversion/: CMakeCache.txt  CMakeLists.txt  Makefile  analyze_tour_results.py  cmake_install.cmake  export_github_pages_data.py  plot_3d_interactive.py  plot_results.py  run_benchmarks_withdifferentseeds.sh  se3_room_tour_benchmark.cpp  se3_room_tour_one_run  se3_room_tour_one_run.cpp
ompl_cpp_bench/4roomversion/results/: four_rooms_boxes_env0.csv  four_rooms_boxes_env3.csv  four_rooms_boxes_env4.csv  four_rooms_meta_env0.txt  path_BITstar_env0_run10_seed22345.csv  path_BITstar_env0_run12_seed24345.csv  path_BITstar_env0_run15_seed27345.csv  path_BITstar_env0_run18_seed30345.csv  path_BITstar_env0_run1_seed13345.csv  path_BITstar_env0_run2_seed14345.csv  path_BITstar_env0_run3_seed15345.csv  path_BITstar_env0_run6_seed18345.csv  path_BITstar_env0_run8_seed20345.csv  path_BITstar_env0_run9_seed21345.csv  path_BITstar_env1_run10_seed122345.csv  path_BITstar_env1_run11_seed123345.csv  path_BITstar_env1_run12_seed124345.csv  path_BITstar_env1_run13_seed125345.csv  path_BITstar_env1_run15_seed127345.csv  path_BITstar_env1_run16_seed128345.csv  path_BITstar_env1_run17_seed129345.csv  path_BITstar_env1_run18_seed130345.csv  path_BITstar_env1_run19_seed131345.csv  path_BITstar_env1_run1_seed113345.csv  path_BITstar_env1_run4_seed116345.csv  path_BITstar_env1_run6_seed118345.csv  path_BITstar_env1_run8_seed120345.csv  path_BITstar_env1_run9_seed121345.csv  path_BITstar_env2_run10_seed222345.csv  path_BITstar_env2_run12_seed224345.csv  (+177 more)
(+349 files in other folders)
